deployment/K8/services/ingress/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: grafana.poliformas.com.gt
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - secretName: joomla-tls-cert
    hosts:
      - grafana.poliformas.com.gt
