deployment/K8/services/ingress/ingress-principal.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
  annotations:
    cert-manager.io/issue-temporary-certificate: "true"
    certmanager.k8s.io/acme-challenge-type: http01
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: poliformas.com.gt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-vuejs
            port:
              number: 80
  - host: backend.poliformas.com.gt
    http:
      paths:
      - path: /api/vendedores
        pathType: Prefix
        backend:
          service:
            name: service-nodejs-vendedores
            port:
              number: 5000
      - path: /api/movimientos
        pathType: Prefix
        backend:
          service:
            name: service-nodejs-movimientos
            port:
              number: 5000
      - path: /api/marcas
        pathType: Prefix
        backend:
          service:
            name: service-nodejs-productos
            port:
              number: 5000
      - path: /api/productos
        pathType: Prefix
        backend:
          service:
            name: service-nodejs-productos
            port:
              number: 5000
      - path: /api/proveedores
        pathType: Prefix
        backend:
          service:
            name: service-nodejs-proveedores
            port:
              number: 5000
      - path: /api/reportes
        pathType: Prefix
        backend:
          service:
            name: service-nodejs-reportes
            port:
              number: 5000
  tls:
  - secretName: joomla-tls-cert
    hosts:
      - poliformas.com.gt
      - grafana.poliformas.com.gt
      - backend.poliformas.com.gt
      - prometheus.poliformas.com.gt
